--- a/DesktopWallpaper.vcxproj.filters
+++ b/DesktopWallpaper.vcxproj.filters
@@ -47,4 +47,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="settings.manifest" />
+  </ItemGroup>
 </Project>
