remove vertex shader, rename fragment shader to shader

--- a/DesktopWallpaper.vcxproj
+++ b/DesktopWallpaper.vcxproj
@@ -26,8 +26,7 @@
     <ClInclude Include="WorkerWEnumerator.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="fragment_shader.glsl" />
-    <None Include="vertex_shader.glsl" />
+    <None Include="shader.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="DesktopWallpaper.ico" />
